sort.pancake.BubblePancake.scala.error
Compilation error:
BubblePancake:3: error: not found: value l
  l=getStackSize()
  ^BubblePancake:4: error: not found: value l
  for( i <- 0 to l-1){
                 ^