sort.pancake.BubblePancake.scala.code
def solve() {
  l=getStackSize()
  for( i <- 0 to l-1){
    var j = i
    while(getPancakeRadius(j)>getPancakeRadius(j+1)){
    	swap(j)
      j+=1
    }
  }
}




def swap(n : Int){
  flip(n)
  flip(n+1)
}